--- a/Classification/notebooks/dataset1_KNN.ipynb
+++ b/Classification/notebooks/dataset1_KNN.ipynb
@@ -123,7 +123,12 @@
    "id": "4b1c834bda215534"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-15T07:46:23.944638Z",
+     "start_time": "2024-09-15T07:44:45.576264Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# KNN model\n",
@@ -138,11 +143,26 @@
     "knn.train()"
    ],
    "id": "6c6425d9fcae904f",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 2 folds for each of 2 candidates, totalling 4 fits\n",
+      "Best parameters: {'n_neighbors': 10}\n",
+      "Best score: 0.902\n"
+     ]
+    }
+   ],
+   "execution_count": 16
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-15T07:46:41.510352Z",
+     "start_time": "2024-09-15T07:46:41.441637Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# save model\n",
@@ -151,8 +171,17 @@
     "save_cv_results(knn.cv_results, 'results/model_outputs', model_name, dataset)"
    ],
    "id": "2b3e15978cb08de8",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved successfully at results/test/knn_dataset1.joblib\n",
+      "Cross-validation results saved successfully at results/model_outputs/knn_dataset1_cv_results.pkl\n"
+     ]
+    }
+   ],
+   "execution_count": 17
   },
   {
    "metadata": {},
