--- a/Classification/notebooks/dataset1_SVM.ipynb
+++ b/Classification/notebooks/dataset1_SVM.ipynb
@@ -52,7 +52,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from src.common.utils import save_model, load_model, save_cv_results, load_cv_results, plot_leanring_curve, save_plot, save_metrics, load_metrics,format_cv_results, plot_complexity_curve, set_global_plot_style\n",
+    "from src.common.utils import save_model, load_model, save_cv_results, load_cv_results, plot_leanring_curve, save_plot, save_metrics, load_metrics,format_cv_results, plot_complexity_curve,\n",
     "from src.dataset1_tabular.models import SVMModel\n",
     "\n",
     "# set the global plot style\n",
