--- a/Classification/notebooks/dataset1_data_exploration.ipynb
+++ b/Classification/notebooks/dataset1_data_exploration.ipynb
@@ -22,6 +22,30 @@
   {
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2024-09-15T08:07:36.643531Z",
+     "start_time": "2024-09-15T08:07:36.641460Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import sys\n",
+    "print(sys.executable)"
+   ],
+   "id": "3d6770291a79b309",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/Placebo/anaconda3/envs/nlp/bin/python\n"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
      "end_time": "2024-09-07T07:32:53.781560Z",
      "start_time": "2024-09-07T07:32:53.775407Z"
     }
