add imbalance model

--- a/Classification/notebooks/dataset1_result_analysis.ipynb
+++ b/Classification/notebooks/dataset1_result_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b56c7ec76a82fa6f",
    "metadata": {
     "ExecuteTime": {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "382ee9984f59b275",
    "metadata": {
     "ExecuteTime": {
@@ -176,6 +176,27 @@
    "metadata": {},
    "source": [
     "## Complexity curve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a40c0bf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'results/dataset1/model_outputs'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_dir"
    ]
   },
   {
@@ -1397,6 +1418,215 @@
     "ax.set_xticklabels(cv_results_df['hidden_layer_sizes'], rotation=45, ha='right')\n",
     "# save\n",
     "save_plot(lr_plt, output_dir, 'nn', 'cc', name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c606f65",
+   "metadata": {},
+   "source": [
+    "# Boosting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5a13833d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model loaded successfully from results/dataset1/model_outputs/boosting_bank_campaign.joblib\n",
+      "Metrics loaded successfully from results/dataset1/model_outputs/boosting_bank_campaign_metrics.json\n",
+      "the best model params: {'ccp_alpha': 0.0, 'criterion': 'friedman_mse', 'init': None, 'learning_rate': 0.1, 'loss': 'log_loss', 'max_depth': 3, 'max_features': None, 'max_leaf_nodes': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 200, 'n_iter_no_change': None, 'random_state': 17, 'subsample': 0.7, 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': 0, 'warm_start': False}\n",
+      "the metrics of testing dataset: {'accuracy': 0.9172129157562515, 'precision': 0.6700636942675159, 'recall': 0.5542676501580611, 'f1': 0.6066897347174164}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load the best model param\n",
+    "best_model = load_model(input_dir, 'boosting', name)\n",
+    "metrics = load_metrics(input_dir, 'boosting', name)\n",
+    "print(f'the best model params: {best_model.get_params()}')\n",
+    "print(f'the metrics of testing dataset: {metrics}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19967431",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de08977a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "best_model.feature_importances_\n",
+    "# load preprocessor\n",
+    "preprocessor = joblib.load('data/dataset1/processed/preprocessor.joblib')\n",
+    "# get the feature names\n",
+    "preprocessor.transformers_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c2fe9528",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['age',\n",
+       " 'duration',\n",
+       " 'campaign',\n",
+       " 'previous',\n",
+       " 'emp.var.rate',\n",
+       " 'cons.price.idx',\n",
+       " 'cons.conf.idx',\n",
+       " 'euribor3m',\n",
+       " 'nr.employed',\n",
+       " 'pdays_NoContact',\n",
+       " 'pdays_Pdays0_2',\n",
+       " 'pdays_Pdays3_7',\n",
+       " 'pdays_Pdays8_14',\n",
+       " 'pdays_Pdays>14',\n",
+       " 'job_admin.',\n",
+       " 'job_blue-collar',\n",
+       " 'job_entrepreneur',\n",
+       " 'job_housemaid',\n",
+       " 'job_management',\n",
+       " 'job_retired',\n",
+       " 'job_self-employed',\n",
+       " 'job_services',\n",
+       " 'job_student',\n",
+       " 'job_technician',\n",
+       " 'job_unemployed',\n",
+       " 'job_unknown',\n",
+       " 'marital_divorced',\n",
+       " 'marital_married',\n",
+       " 'marital_single',\n",
+       " 'marital_unknown',\n",
+       " 'education_basic.4y',\n",
+       " 'education_basic.6y',\n",
+       " 'education_basic.9y',\n",
+       " 'education_high.school',\n",
+       " 'education_illiterate',\n",
+       " 'education_professional.course',\n",
+       " 'education_university.degree',\n",
+       " 'education_unknown',\n",
+       " 'day_of_week_fri',\n",
+       " 'day_of_week_mon',\n",
+       " 'day_of_week_thu',\n",
+       " 'day_of_week_tue',\n",
+       " 'day_of_week_wed',\n",
+       " 'default_no',\n",
+       " 'default_unknown',\n",
+       " 'default_yes',\n",
+       " 'housing_no',\n",
+       " 'housing_unknown',\n",
+       " 'housing_yes',\n",
+       " 'loan_no',\n",
+       " 'loan_unknown',\n",
+       " 'loan_yes',\n",
+       " 'contact_cellular',\n",
+       " 'contact_telephone',\n",
+       " 'month_apr',\n",
+       " 'month_aug',\n",
+       " 'month_dec',\n",
+       " 'month_jul',\n",
+       " 'month_jun',\n",
+       " 'month_mar',\n",
+       " 'month_may',\n",
+       " 'month_nov',\n",
+       " 'month_oct',\n",
+       " 'month_sep',\n",
+       " 'poutcome_failure',\n",
+       " 'poutcome_nonexistent',\n",
+       " 'poutcome_success']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_feature_names_from_preprocessor(preprocessor):\n",
+    "    feature_names = []\n",
+    "    for name, trans, column in preprocessor.transformers_:\n",
+    "        if name == 'num':\n",
+    "            feature_names.extend(column)\n",
+    "        elif name in ['cat', 'pdays']:\n",
+    "            if hasattr(trans, 'named_steps') and 'onehot' in trans.named_steps:\n",
+    "                encoder = trans.named_steps['onehot']\n",
+    "                if hasattr(encoder, 'get_feature_names_out'):\n",
+    "                    cat_features = encoder.get_feature_names_out(column)\n",
+    "                else:\n",
+    "                    cat_features = [f\"{col}_{val}\" for col, vals in zip(column, encoder.categories_) \n",
+    "                                    for val in vals]\n",
+    "                feature_names.extend(cat_features)\n",
+    "            else:\n",
+    "                feature_names.extend(column)\n",
+    "    return feature_names\n",
+    "\n",
+    "get_feature_names_from_preprocessor(preprocessor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9b4f46ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('num',\n",
+       "  Pipeline(steps=[('scaler', StandardScaler())]),\n",
+       "  ['age',\n",
+       "   'duration',\n",
+       "   'campaign',\n",
+       "   'previous',\n",
+       "   'emp.var.rate',\n",
+       "   'cons.price.idx',\n",
+       "   'cons.conf.idx',\n",
+       "   'euribor3m',\n",
+       "   'nr.employed']),\n",
+       " ('pdays',\n",
+       "  Pipeline(steps=[('categorize',\n",
+       "                   FunctionTransformer(func=<function covert_pdays_to_categorical at 0x168e7c0d0>)),\n",
+       "                  ('onehot', OneHotEncoder(handle_unknown='ignore'))]),\n",
+       "  ['pdays']),\n",
+       " ('cat',\n",
+       "  Pipeline(steps=[('onehot', OneHotEncoder(handle_unknown='ignore'))]),\n",
+       "  ['job',\n",
+       "   'marital',\n",
+       "   'education',\n",
+       "   'day_of_week',\n",
+       "   'default',\n",
+       "   'housing',\n",
+       "   'loan',\n",
+       "   'contact',\n",
+       "   'month',\n",
+       "   'poutcome'])]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocessor.transformers_"
    ]
   },
   {
