--- a/RandomizedOptimization/playground/4peak_plots.ipynb
+++ b/RandomizedOptimization/playground/4peak_plots.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-11T07:56:59.674154Z",
-     "start_time": "2024-10-11T07:56:59.669779Z"
+     "end_time": "2024-10-16T06:40:36.029947Z",
+     "start_time": "2024-10-16T06:40:36.024684Z"
     }
    },
    "source": [
@@ -29,8 +29,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:07.093790Z",
-     "start_time": "2024-10-13T00:35:07.075697Z"
+     "end_time": "2024-10-16T06:40:37.095441Z",
+     "start_time": "2024-10-16T06:40:36.122686Z"
     }
    },
    "cell_type": "code",
@@ -40,17 +40,8 @@
     "from src.utils import save_results, plot_performance_vs_size, plot_iterations_vs_time, plot_fitness_vs_iteration, load_results, parse_fitness_curve, set_plot_style, save_plot, plot_fitness_vs_iteration_wsize, plot_parameter_vs_metric, plot_fitness_curve_with_params"
    ],
    "id": "5482f0502e44d0c0",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
-   "execution_count": 59
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -61,8 +52,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:07.189521Z",
-     "start_time": "2024-10-13T00:35:07.176089Z"
+     "end_time": "2024-10-16T06:40:37.109482Z",
+     "start_time": "2024-10-16T06:40:37.098298Z"
     }
    },
    "cell_type": "code",
@@ -72,26 +63,26 @@
    ],
    "id": "eff8e53c8bb2590f",
    "outputs": [],
-   "execution_count": 60
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:07.240333Z",
-     "start_time": "2024-10-13T00:35:07.204108Z"
+     "end_time": "2024-10-16T06:40:37.135922Z",
+     "start_time": "2024-10-16T06:40:37.117167Z"
     }
    },
    "cell_type": "code",
    "source": "results = load_results('fourpeaks_size', results_dir)",
    "id": "ddfed7b872b02134",
    "outputs": [],
-   "execution_count": 61
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:07.480918Z",
-     "start_time": "2024-10-13T00:35:07.263443Z"
+     "end_time": "2024-10-16T06:40:42.088802Z",
+     "start_time": "2024-10-16T06:40:37.144323Z"
     }
    },
    "cell_type": "code",
@@ -106,13 +97,13 @@
      ]
     }
    ],
-   "execution_count": 62
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:07.721492Z",
-     "start_time": "2024-10-13T00:35:07.491208Z"
+     "end_time": "2024-10-16T06:40:42.968104Z",
+     "start_time": "2024-10-16T06:40:42.152999Z"
     }
    },
    "cell_type": "code",
@@ -127,13 +118,13 @@
      ]
     }
    ],
-   "execution_count": 63
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:07.916563Z",
-     "start_time": "2024-10-13T00:35:07.731254Z"
+     "end_time": "2024-10-16T06:40:43.780741Z",
+     "start_time": "2024-10-16T06:40:42.976209Z"
     }
    },
    "cell_type": "code",
@@ -148,13 +139,13 @@
      ]
     }
    ],
-   "execution_count": 64
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:08.231136Z",
-     "start_time": "2024-10-13T00:35:07.926105Z"
+     "end_time": "2024-10-16T06:40:45.368284Z",
+     "start_time": "2024-10-16T06:40:43.790093Z"
     }
    },
    "cell_type": "code",
@@ -169,13 +160,13 @@
      ]
     }
    ],
-   "execution_count": 65
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:08.261784Z",
-     "start_time": "2024-10-13T00:35:08.241826Z"
+     "end_time": "2024-10-16T06:40:45.404309Z",
+     "start_time": "2024-10-16T06:40:45.383280Z"
     }
    },
    "cell_type": "code",
@@ -882,12 +873,12 @@
        "</div>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 66
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -904,8 +895,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:08.304396Z",
-     "start_time": "2024-10-13T00:35:08.291617Z"
+     "end_time": "2024-10-16T06:40:45.435169Z",
+     "start_time": "2024-10-16T06:40:45.423654Z"
     }
    },
    "cell_type": "code",
@@ -915,26 +906,26 @@
    ],
    "id": "ba09e5edc5414af7",
    "outputs": [],
-   "execution_count": 67
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:08.350427Z",
-     "start_time": "2024-10-13T00:35:08.331547Z"
+     "end_time": "2024-10-16T06:40:45.469214Z",
+     "start_time": "2024-10-16T06:40:45.454830Z"
     }
    },
    "cell_type": "code",
    "source": "results = load_results('fourpeaks_hyperparameter_size_50', results_dir)",
    "id": "104ac8957f99eea8",
    "outputs": [],
-   "execution_count": 68
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:08.398502Z",
-     "start_time": "2024-10-13T00:35:08.376202Z"
+     "end_time": "2024-10-16T06:40:45.496436Z",
+     "start_time": "2024-10-16T06:40:45.474602Z"
     }
    },
    "cell_type": "code",
@@ -1893,12 +1884,12 @@
        "</div>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 69
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -1909,8 +1900,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:08.921624Z",
-     "start_time": "2024-10-13T00:35:08.428041Z"
+     "end_time": "2024-10-16T06:40:50.220016Z",
+     "start_time": "2024-10-16T06:40:45.521787Z"
     }
    },
    "cell_type": "code",
@@ -1948,7 +1939,7 @@
      ]
     }
    ],
-   "execution_count": 70
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -1959,8 +1950,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:09.772793Z",
-     "start_time": "2024-10-13T00:35:08.943583Z"
+     "end_time": "2024-10-16T06:40:57.914178Z",
+     "start_time": "2024-10-16T06:40:50.279069Z"
     }
    },
    "cell_type": "code",
@@ -2000,7 +1991,20 @@
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  alg_df[param] = alg_df[param].apply(lambda x: 'GeomDecay' if str(x) == '1.0' else str(x).split('(')[0])\n",
+      "  alg_df[param] = alg_df[param].apply(lambda x: 'GeomDecay' if str(x) == '1.0' else str(x).split('(')[0])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plot saved as figures/fourpeaks/hyperparameter_experiment_size_50/SA_best_fitness_vs_param_max_attempts_vs_problem_size.png\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "/Users/Placebo/OMSCS/CS7641-ML/MachineLearningProjects/RandomizedOptimization/src/utils.py:288: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
@@ -2013,13 +2017,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plot saved as figures/fourpeaks/hyperparameter_experiment_size_50/SA_best_fitness_vs_param_max_attempts_vs_problem_size.png\n",
       "Plot saved as figures/fourpeaks/hyperparameter_experiment_size_50/SA_execution_time_vs_param_max_attempts_vs_problem_size.png\n",
       "Plot saved as figures/fourpeaks/hyperparameter_experiment_size_50/SA_fitness_curves_vs_problem_size.png\n"
      ]
     }
    ],
-   "execution_count": 71
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -2030,8 +2033,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:10.472627Z",
-     "start_time": "2024-10-13T00:35:09.777047Z"
+     "end_time": "2024-10-16T06:41:01.266900Z",
+     "start_time": "2024-10-16T06:40:57.918771Z"
     }
    },
    "cell_type": "code",
@@ -2082,13 +2085,13 @@
      ]
     }
    ],
-   "execution_count": 72
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T09:36:48.826844Z",
-     "start_time": "2024-10-13T09:36:48.614481Z"
+     "end_time": "2024-10-16T06:41:02.670653Z",
+     "start_time": "2024-10-16T06:41:01.278035Z"
     }
    },
    "cell_type": "code",
@@ -2118,7 +2121,7 @@
      ]
     }
    ],
-   "execution_count": 77
+   "execution_count": 16
   },
   {
    "metadata": {},
@@ -2129,8 +2132,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:11.354872Z",
-     "start_time": "2024-10-13T00:35:10.675589Z"
+     "end_time": "2024-10-16T06:41:04.900510Z",
+     "start_time": "2024-10-16T06:41:02.681861Z"
     }
    },
    "cell_type": "code",
@@ -2181,13 +2184,13 @@
      ]
     }
    ],
-   "execution_count": 74
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:11.552542Z",
-     "start_time": "2024-10-13T00:35:11.366414Z"
+     "end_time": "2024-10-16T06:41:07.118669Z",
+     "start_time": "2024-10-16T06:41:04.911019Z"
     }
    },
    "cell_type": "code",
@@ -2210,13 +2213,13 @@
      ]
     }
    ],
-   "execution_count": 75
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:11.565792Z",
-     "start_time": "2024-10-13T00:35:11.563637Z"
+     "end_time": "2024-10-16T06:41:07.132939Z",
+     "start_time": "2024-10-16T06:41:07.131381Z"
     }
    },
    "cell_type": "code",
