--- a/RandomizedOptimization/playground/nqueue_plots.ipynb
+++ b/RandomizedOptimization/playground/nqueue_plots.ipynb
@@ -4,21 +4,33 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-10-16T06:40:53.685317Z",
+     "start_time": "2024-10-16T06:40:53.680485Z"
+    }
    },
    "source": [
     "import os\n",
     "os.chdir('../')\n",
     "print(os.getcwd())"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/Placebo/OMSCS/CS7641-ML/MachineLearningProjects/RandomizedOptimization\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:18.718883Z",
-     "start_time": "2024-10-13T00:35:18.534105Z"
+     "end_time": "2024-10-17T08:46:05.710795Z",
+     "start_time": "2024-10-17T08:46:04.095286Z"
     }
    },
    "cell_type": "code",
@@ -28,23 +40,14 @@
     "from src.utils import save_results, plot_performance_vs_size, plot_iterations_vs_time, plot_fitness_vs_iteration, load_results, parse_fitness_curve, set_plot_style, save_plot, plot_fitness_vs_iteration_wsize, plot_parameter_vs_metric, plot_fitness_curve_with_params"
    ],
    "id": "5482f0502e44d0c0",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
-   "execution_count": 167
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:21.137628Z",
-     "start_time": "2024-10-13T00:35:21.116641Z"
+     "end_time": "2024-10-17T08:46:06.680812Z",
+     "start_time": "2024-10-17T08:46:06.657385Z"
     }
    },
    "cell_type": "code",
@@ -55,7 +58,7 @@
    ],
    "id": "5495cf17501dedd1",
    "outputs": [],
-   "execution_count": 168
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -66,8 +69,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:21.158851Z",
-     "start_time": "2024-10-13T00:35:21.144708Z"
+     "end_time": "2024-10-17T08:46:16.044202Z",
+     "start_time": "2024-10-17T08:46:16.016364Z"
     }
    },
    "cell_type": "code",
@@ -77,26 +80,26 @@
    ],
    "id": "eff8e53c8bb2590f",
    "outputs": [],
-   "execution_count": 169
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:21.206714Z",
-     "start_time": "2024-10-13T00:35:21.169948Z"
+     "end_time": "2024-10-17T08:46:17.871690Z",
+     "start_time": "2024-10-17T08:46:17.845945Z"
     }
    },
    "cell_type": "code",
    "source": "results = load_results('nqueens_size', results_dir)",
    "id": "ddfed7b872b02134",
    "outputs": [],
-   "execution_count": 170
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:21.440804Z",
-     "start_time": "2024-10-13T00:35:21.222743Z"
+     "end_time": "2024-10-16T06:40:53.118260Z",
+     "start_time": "2024-10-16T06:37:29.724463Z"
     }
    },
    "cell_type": "code",
@@ -111,13 +114,13 @@
      ]
     }
    ],
-   "execution_count": 171
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:21.661906Z",
-     "start_time": "2024-10-13T00:35:21.453171Z"
+     "end_time": "2024-10-16T06:40:53.118321Z",
+     "start_time": "2024-10-16T06:37:31.895486Z"
     }
    },
    "cell_type": "code",
@@ -132,13 +135,13 @@
      ]
     }
    ],
-   "execution_count": 172
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:21.915151Z",
-     "start_time": "2024-10-13T00:35:21.689651Z"
+     "end_time": "2024-10-16T06:40:53.118379Z",
+     "start_time": "2024-10-16T06:37:36.434092Z"
     }
    },
    "cell_type": "code",
@@ -153,13 +156,13 @@
      ]
     }
    ],
-   "execution_count": 173
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:22.231499Z",
-     "start_time": "2024-10-13T00:35:21.930255Z"
+     "end_time": "2024-10-16T06:40:53.118425Z",
+     "start_time": "2024-10-16T06:37:37.360110Z"
     }
    },
    "cell_type": "code",
@@ -174,13 +177,13 @@
      ]
     }
    ],
-   "execution_count": 174
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:22.282136Z",
-     "start_time": "2024-10-13T00:35:22.260279Z"
+     "end_time": "2024-10-16T06:40:53.118470Z",
+     "start_time": "2024-10-16T06:37:38.562801Z"
     }
    },
    "cell_type": "code",
@@ -722,12 +725,12 @@
        "</div>"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 175
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -744,8 +747,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:22.333661Z",
-     "start_time": "2024-10-13T00:35:22.317373Z"
+     "end_time": "2024-10-17T08:46:23.199175Z",
+     "start_time": "2024-10-17T08:46:23.181214Z"
     }
    },
    "cell_type": "code",
@@ -755,26 +758,26 @@
    ],
    "id": "ba09e5edc5414af7",
    "outputs": [],
-   "execution_count": 176
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:22.396938Z",
-     "start_time": "2024-10-13T00:35:22.380729Z"
+     "end_time": "2024-10-17T08:46:23.671139Z",
+     "start_time": "2024-10-17T08:46:23.654964Z"
     }
    },
    "cell_type": "code",
    "source": "results = load_results('nqueens_hyperparameter_size_56', results_dir)",
    "id": "104ac8957f99eea8",
    "outputs": [],
-   "execution_count": 177
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:22.430152Z",
-     "start_time": "2024-10-13T00:35:22.409172Z"
+     "end_time": "2024-10-17T08:46:24.622387Z",
+     "start_time": "2024-10-17T08:46:24.597456Z"
     }
    },
    "cell_type": "code",
@@ -1429,12 +1432,12 @@
        "</div>"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 178
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -1445,8 +1448,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:22.984752Z",
-     "start_time": "2024-10-13T00:35:22.460641Z"
+     "end_time": "2024-10-16T06:40:53.119531Z",
+     "start_time": "2024-10-16T06:37:39.014004Z"
     }
    },
    "cell_type": "code",
@@ -1484,7 +1487,7 @@
      ]
     }
    ],
-   "execution_count": 179
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -1495,8 +1498,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:23.532040Z",
-     "start_time": "2024-10-13T00:35:23.007452Z"
+     "end_time": "2024-10-16T06:40:53.119618Z",
+     "start_time": "2024-10-16T06:37:48.846872Z"
     }
    },
    "cell_type": "code",
@@ -1536,7 +1539,20 @@
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  alg_df[param] = alg_df[param].apply(lambda x: 'GeomDecay' if str(x) == '1.0' else str(x).split('(')[0])\n",
+      "  alg_df[param] = alg_df[param].apply(lambda x: 'GeomDecay' if str(x) == '1.0' else str(x).split('(')[0])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plot saved as figures/nqueens/hyperparameter_experiment_size_56/SA_best_fitness_vs_param_max_attempts_vs_problem_size.png\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "/Users/Placebo/OMSCS/CS7641-ML/MachineLearningProjects/RandomizedOptimization/src/utils.py:288: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
@@ -1549,13 +1565,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plot saved as figures/nqueens/hyperparameter_experiment_size_56/SA_best_fitness_vs_param_max_attempts_vs_problem_size.png\n",
       "Plot saved as figures/nqueens/hyperparameter_experiment_size_56/SA_execution_time_vs_param_max_attempts_vs_problem_size.png\n",
       "Plot saved as figures/nqueens/hyperparameter_experiment_size_56/SA_fitness_curves_vs_problem_size.png\n"
      ]
     }
    ],
-   "execution_count": 180
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -1566,8 +1581,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:24.278209Z",
-     "start_time": "2024-10-13T00:35:23.535334Z"
+     "end_time": "2024-10-16T06:40:53.119679Z",
+     "start_time": "2024-10-16T06:37:56.517393Z"
     }
    },
    "cell_type": "code",
@@ -1618,18 +1633,18 @@
      ]
     }
    ],
-   "execution_count": 181
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:24.497959Z",
-     "start_time": "2024-10-13T00:35:24.297350Z"
+     "end_time": "2024-10-17T08:46:40.090089Z",
+     "start_time": "2024-10-17T08:46:36.905079Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "sub_results = results[results['param_pop_size'] == 400]\n",
+    "sub_results = results[results['param_pop_size'] == 100]\n",
     "plot_fitness_curve_with_params(\n",
     "    df = sub_results,\n",
     "    algorithm='GA',\n",
@@ -1654,13 +1669,13 @@
      ]
     }
    ],
-   "execution_count": 182
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T00:35:24.504626Z",
-     "start_time": "2024-10-13T00:35:24.502972Z"
+     "end_time": "2024-10-16T06:40:53.119850Z",
+     "start_time": "2024-10-16T06:38:10.723733Z"
     }
    },
    "cell_type": "code",
